fix: Change some layout and get rid of inclusive less than
The `isHighlighted` function should have a `<`, not `<=` to test for the
end of a highlighted region. This is an off-by-one error.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
 <body>
   <div id="root">
-    <p>
+    <div>
       Enter text:
-    </p>
+    </div>
     <textarea id="text_area" rows="4" cols="50"></textarea>
-    <br>
-    <button id="submit" onclick="submit()">Submit</button>
+    <div>
+      <button id="submit" onclick="submit()">Submit</button>
+    </div>
   </div>
 </body>
 
