--- a/index.html
+++ b/index.html
@@ -21,14 +21,30 @@
   <div id="highlight_controls" class="hidden container">
     <input class="text_input" type="text" id="highlight_regex" value="perform" />
     <select class="button" id="highlight_color">
-      <option value="#ff7">Yellow</option>
-      <option value="#f77">Red</option>
-      <option value="#7f7">Green</option>
+      <option value="#ffa">Yellow</option>
+      <option value="#faa">Red</option>
+      <option value="#afa">Green</option>
+      <option value="#aaf">Blue</option>
     </select>
     <button class="button" onclick="highlightMatches()">Highlight</button>
     <button class="button" onclick="clearHighlights()">Clear Highlights</button>
     <button class="button" onclick="exportHTML()">Export HTML</button>
   </div>
+  <modal id="modal" class="hidden">
+    <div id="modal-content">
+      <span id="modal-close" onclick="closeModal()">&times;</span>
+      <div id="modal-header">
+        <h2 id="modal-title">Modal Title</h2>
+      </div>
+      <div id="modal-body">
+        <p id="modal-text">Some text in the Modal Body</p>
+      </div>
+      <div id="modal-footer">
+        <button id="modal-cancel" onclick="closeModal()">Cancel</button>
+        <button id="modal-ok" onclick="closeModal()">OK</button>
+      </div>
+    </div>
+  </modal>
 </body>
 
 </html>
