feat: Add instructions to the page
This commit adds a few p tags so the user knows how to use the app.

Adding the instructions in the render function is a little silly, but
whatever.

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,7 @@
 <body>
   <h1>Text Annotation Tool</h1>
   <div id="root" class="container">
+    <p class="centered">Please paste your text here, and then click submit.</p>
     <div>
       <textarea id="text_area" name="userText" rows="20" cols="50" placeholder="Enter your text here..."></textarea>
       <br><br>
