feat: Add modal to script
We previously had the modal in the script, but now it has the ability to
have configurable content and callbacks.

--- a/static/index.html
+++ b/static/index.html
@@ -41,8 +41,8 @@
         <p id="modal-text">Some text in the Modal Body</p>
       </div>
       <div id="modal-footer">
-        <button id="modal-cancel" onclick="closeModal()">Cancel</button>
-        <button id="modal-ok" onclick="closeModal()">OK</button>
+        <button id="modal-cancel">Cancel</button>
+        <button id="modal-ok">OK</button>
       </div>
     </div>
   </modal>
